app/static/sass/ringing_room.scss
@import "global_design";
@import "circle";


body:window-inactive {
    opacity: 0.4; // blur when window inactive
}

/* Tower Controls */

// positioning of tower header
.tower_header {
    position: relative;
    top: 0; /* Stay at the top */
    left: 0;
    width: 100%;
    padding-top: 2rem;
    padding-bottom: 0;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    z-index: 3;
}

// tower name positioning
#tower_name {
    font-family: 'Simonetta', cursive;
    white-space: nowrap;
}

// tower id positioning
#tower_id {
    font-size: larger;
}

.tower_header .row:last-child {
    padding-bottom: 0.5rem;
}

.toggle_controls { visibility: visible; }

// positioning for tower controls
.tower_controls {
    position: relative;
    overflow: hidden; /* Disable horizontal scroll */
    width: 100%;
    z-index: 2;
}

.size_control button {
    width: 100%;
}

.row {
    padding-bottom: 0.75rem; /* a bit more space between rows */
}

.row .tower_controls .row {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
}

.row .row { /* don't add extra padding on embedded grids */
    padding-left: 0;
    padding-right: 0;
}

.row h1 { margin: 0; }

.row h3 { margin: 0; }

hr {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
}


.user_list {
  display: table;
  border-width: 3px;
  border-left-style: solid;
  padding-left: 0px;
  margin-top: 0px;
  margin-left: 1rem;
  margin-top: 0.5rem;

}

.user_list li {
  display: table;
  margin-left: 1rem;
  list-style-type: none;
  font-size: larger;
}

.list-group-item.disabled {
    color: black;
}

.btn {
    cursor: pointer;
}

.observers {
    font-style: italic;
}

.cur_user {
    font-weight: bold;
}

.toggle_assign {
  cursor: pointer;
}

/* Username Input Form */

.un_input_form { 
  position: absolute;
  max-width: 25em;
  top: 30%;
  left: 50%;
  transform: translate(-50%, -50%);
}


/* Help */

.help {
    margin-left: 1.5rem;
    margin-right: 1.5rem;
    width: 100%;
}


/* Bells */ 

.bell {
    padding: 0;
    white-space: nowrap;
    z-index: 1;
    overflow: visible;
    width: 10rem;
}

.user_cartouche{
    max-width: 5.75rem;
}

.bell_metadata button.btn {
    font-size: 0.75rem;
    padding: 1% 5%;
}

.btn_number, .btn_unassign {
    width: 1.75rem;
}

.btn_number:hover {
    color: $secondary;
    background-color: inherit;
    border-color: $secondary;
}

.treble.btn_number:hover {
    color: $primary;
    background-color: inherit;
    border-color: $primary;
}

.btn-outline-secondary.btn_number:not(:disabled):not(.disabled).active{
    color: $secondary;
    background-color: inherit;
    border-color: $secondary;
}

.btn-outline-primary.btn_number:not(:disabled):not(.disabled).active{
    color: $primary;
    background-color: inherit;
    border-color: $primary;
}

.btn-primary.btn_number:not(:disabled):not(.disabled).active:focus,
.btn-outline-secondary.btn_number:not(:disabled):not(.disabled).active:focus,
.btn-outline-primary.btn_number:not(:disabled):not(.disabled).active:focus{
    box-shadow: none;
}

.btn-primary.btn_assigned_user.disabled,
.btn-outline-secondary.btn_assigned_user.disabled,
.btn-outline-primary.btn_assigned_user.disabled{
    opacity: 1;
    cursor: inherit;
}

.btn-primary.btn_assigned_user.disabled:focus,
.btn-outline-secondary.btn_assigned_user.disabled:focus,
.btn-outline-primary.btn_assigned_user.disabled:focus{
    box-shadow: none;
}

.btn_assigned_user {
    text-overflow: ellipsis;
    overflow: hidden;
    width: 100%;
}

.assigned_user {
    width: 100%;
    text-overflow: ellipsis;
    overflow: hidden;
      cursor: pointer;
}

.bell_metadata [class^="col-"] {
    padding: 0;
}

.bell_img {
    cursor: pointer;
}

.bell_img.assignment_mode{
    opacity: 0.4;
}

.assign {
    width: max-content;
}

.assignment_active {
    cursor: pointer;
}

.handbell .bell_img {
  -webkit-transform: scale(1.5) translateY(-10%);
  transform: scale(1.5) translateY(-10%);

}

.handbell.left_side .bell_img {
  -webkit-transform: scale(1.5) scaleX(-1) translateY(-10%);
  transform: scale(1.5) scaleX(-1) translateY(-10%);
}

/* Scary mixin land */

/* On larger screens, permanently open the menu */
@include media-breakpoint-up(lg){
    .collapse.tower_controls, .collaps.tower_controls:not(.show) { 
        display: block; 
    }
    .sidebar_col {
        min-width: max-content;
        max-width: 25rem;
    }
    .help {
        width: 40rem;
    }
}

